# yadro-2025-test-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: billing_manager.cpp  billing_manager.h  club_utils.cpp  club_utils.h  event.cpp  main.cpp  table_manager.cpp  table_manager.h
src/app/: app.cpp  app.h  billing_manager.cpp  club_utils.cpp  event.h  table_manager.cpp  table_manager.h
test/: CMakeLists.txt  app_test.cpp  billing_manager_test.cpp  table_manager_test.cpp  time_test.cpp
test/inputs/: queue.in  single_table.in
test/outputs/: queue.out  single_table.out
